ZH/6.1/软件资源/README.md
## 工具下载

> 免责声明：若涉及到版权等，请用户自行购买。

| 名字               | 版本号    | 大小   | 简介                                      | 操作                                                                       |
| -------------------| -------- | ------ | ----------------------------------------| ---------------------------------------------------------------------------------------- |
| Python 开发框架 V3   | 4.4.2.167 | 0.9M   | 蓝鲸 SaaS 统一 Python 开发框架 V3         | [下载](https://bktencent-1252002024.file.myqcloud.com/framework_4.4.2.167.tar.gz) |
| Python 开发样例 V3   | 4.4.2.167 | 2.04 MB | 蓝鲸 SaaS 统一 Python 开发样例 V3         | [下载](https://bktencent-1252002024.file.myqcloud.com/fw_example_4.4.2.167.tar.gz) |
| 组件模板            | 1.0.0    | 2KB    | 蓝鲸 ESB 服务编码模板                     | [下载](https://bktencent-1252002024.file.myqcloud.com/hcp.tar.gz) |
| API 网关            | 1.0.0    | 90KB   | API 网关组件开发模板                      | [下载](https://bktencent-1252002024.file.myqcloud.com/api_dev_template.tar.gz) |
| 微信公众号 H5        | 1.0.0    | 72KB   | 微信公众号 H5 模板                          | [下载](https://bktencent-1252002024.file.myqcloud.com/framework_weixin_package.tar.gz) |
| 微信小程序          | 1.0.0    | 340KB  | 微信小程序模板                            | [下载](https://bktencent-1252002024.file.myqcloud.com/framework_miniweixin_package.tar.gz) |
| Rabbitmq           | 3.6.2    | 95.9MB | Rabbitmq 安装包                         | [下载](https://bktencent-1252002024.file.myqcloud.com/rabbitmq-server-3.6.2.zip) |
| Python 资源包       | 1.0      | 19.8MB   | Python 资源包                          | [下载](https://bktencent-1252002024.file.myqcloud.com/python-sdk-1.0.zip) |
| Python             | 2.7.11   | 17.7MB | Python 安装包                            | [下载](https://bktencent-1252002024.file.myqcloud.com/python-2.7.11.msi) |
| PyCharm            | 2019.3   | 278MB  | PyCharm 安装包                           | [下载](https://www.jetbrains.com/pycharm/download/) |
| Eclipse (含 PyDev) | 4.5.2    | 476MB  | Eclipse 编译器                           | [下载](https://bktencent-1252002024.file.myqcloud.com/eclipse-4.5.2.zip) |
| MySQL              | 5.6.28.0 | 263MB  | MySQL 安装包                             | [下载](https://bktencent-1252002024.file.myqcloud.com/mysql-installer-community-5.6.28.0.msi) |
| 前端知识学习包      | 无       | 66M    | 前端基础知识学习包，包括一些教程             | [下载](https://bktencent-1252002024.file.myqcloud.com/前端知识学习包.zip) |
| Python 知识学习包    | 无       | 87.4M  | Python 基础知识学习包，包括一些教程、安装包等 | [下载](https://bktencent-1252002024.file.myqcloud.com/python知识学习包.zip) |
| curl.exe | 无 | 3.87 MB | 节点管理手动安装依赖工具 | [下载](https://bktencent-1252002024.file.myqcloud.com/curl.exe) |
| SNMP-generator   | 1.0 | 3.5M |用于监控生成snmp.yml | [下载](https://bktencent-1252002024.file.myqcloud.com/generator1.0.tar.gz) |